# ragenius_project

./: .env  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  agent_based_on_rag.py  agent_with_short_memorie.py  chat ollama  cont.txt  docker-compose.yml  make emnadding  outil  outil.txt  prometheus.yml  pyproject.toml  requirements.txt  run.py  test.py  test01.py  test44.py  test89.py  vesion of package
.devcontainer/: devcontainer.json
app/: chatb.py  connexion_db.py  main.py  middleware.py
app/agent/: agent_factory.py  answer_scorer.py  context.py  hooks.py  intent_router.py  long_memory.py  model.py  profile_formatter.py  prompts.py  response_validator.py  short_memory.py  storage_utils.py  test_.py  tools.py
app/agent/middleware/: pii_ux_mask.py
app/auth/: authentication.py  dependencies.py  models.py
app/chat/: chatbot.py  service.py  test.py  test_chat.py  test_lg.py  test_rag.py
app/rag/: create_embedding.py  get_document_reterived.py
app/rag/books/: machine_learning.txt
app/rag/db/chroma_db/: chroma.sqlite3
auth/: auth.py  dependencies.py  models.py  schemas.py
langGraph/: example.py  short_term.py  test1.py  test2.py  test3.py  test4.py  test5.py
